--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.servlet.multipart.max-request-size = 5MB
 
 ## Hibernate Properties
 # "The SQL dialect makes Hibernate generate better SQL for the chosen database"
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
@@ -20,3 +20,5 @@ spring.jpa.hibernate.ddl-auto = update
 #sql queries in console for debub (not recommended!)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+debug=false
